Replace Locale.of with new Locale constructor
Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>
Signed-off-by: Michael Yingbull <myingbull@conestogac.on.ca>